package main

import (
	"context"
	"encoding/json"
	"fmt"
	"log"
	"net"
	"net/http"
	"os"
	"runtime"
	"sync"
	"time"

	"github.com/gin-gonic/gin"
	"github.com/go-redis/redis/v8"
	"github.com/gorilla/websocket"
	"github.com/jackc/pgx/v5/pgxpool"
	"github.com/lucas-clemente/quic-go"
	"github.com/lucas-clemente/quic-go/http3"
	"google.golang.org/grpc"
)

// MCP Multi-Core GPU Orchestrator
// Integrates: Go services, Ollama, SvelteKit, QUIC, gRPC, WebGPU, Context7

type GPUOrchestrator struct {
	// Core services
	db          *pgxpool.Pool
	redis       *redis.Client
	grpcServer  *grpc.Server
	quicServer  *http3.Server
	wsUpgrader  websocket.Upgrader
	
	// GPU management
	gpuWorkers  []GPUWorker
	tensorQueue chan TensorTask
	
	// Service mesh
	services    map[string]ServiceInstance
	
	// Configuration
	config      OrchestratorConfig
	
	// Synchronization
	mu          sync.RWMutex
	workerPool  *WorkerPool
	
	// Performance metrics
	metrics     PerformanceMetrics
}

type OrchestratorConfig struct {
	HTTPPort     string
	GRPCPort     string
	QUICPort     string
	WebSocketPort string
	DatabaseURL  string
	RedisURL     string
	OllamaURL    string
	MaxWorkers   int
	GPUMemory    int64
	EnableQUIC   bool
	EnableWebGPU bool
}

type ServiceInstance struct {
	Name        string            `json:"name"`
	Type        string            `json:"type"` // "go", "node", "ollama", "gpu"
	Address     string            `json:"address"`
	Port        int               `json:"port"`
	Protocol    string            `json:"protocol"` // "http", "grpc", "quic", "ws"
	Status      string            `json:"status"`
	Metadata    map[string]interface{} `json:"metadata"`
	LastCheck   time.Time         `json:"last_check"`
}

type GPUWorker struct {
	ID          int
	Available   bool
	Memory      int64
	Utilization float64
	Context     context.Context
	Cancel      context.CancelFunc
}

type TensorTask struct {
	ID            string                 `json:"id"`
	Type          string                 `json:"type"` // "embedding", "inference", "som", "attention"
	Input         interface{}            `json:"input"`
	Output        chan interface{}       `json:"-"`
	Priority      int                    `json:"priority"`
	GPURequired   bool                   `json:"gpu_required"`
	Memory        int64                  `json:"memory_estimate"`
	Metadata      map[string]interface{} `json:"metadata"`
	Timestamp     time.Time              `json:"timestamp"`
}

type WorkerPool struct {
	workers    []Worker
	taskQueue  chan TensorTask
	resultQueue chan TaskResult
	wg         sync.WaitGroup
}

type Worker struct {
	id       int
	taskChan chan TensorTask
	quit     chan bool
}

type TaskResult struct {
	TaskID    string      `json:"task_id"`
	Result    interface{} `json:"result"`
	Error     error       `json:"error,omitempty"`
	Duration  time.Duration `json:"duration"`
	WorkerID  int         `json:"worker_id"`
}

type PerformanceMetrics struct {
	TotalTasks        int64   `json:"total_tasks"`
	CompletedTasks    int64   `json:"completed_tasks"`
	FailedTasks       int64   `json:"failed_tasks"`
	AverageLatency    float64 `json:"average_latency_ms"`
	GPUUtilization    float64 `json:"gpu_utilization"`
	ThroughputPerSec  float64 `json:"throughput_per_sec"`
	QueueDepth        int     `json:"queue_depth"`
}

// Enhanced RAG with SOM clustering
type SOMAnalysisRequest struct {
	Query         string                 `json:"query"`
	Context       string                 `json:"context"`
	UserActivity  map[string]interface{} `json:"user_activity"`
	EnableSOM     bool                   `json:"enable_som"`
	EnableAttention bool                 `json:"enable_attention"`
}

type EnhancedRAGResponse struct {
	Query           string                 `json:"query"`
	Response        string                 `json:"response"`
	SOMClusters     []SOMCluster          `json:"som_clusters"`
	AttentionWeights map[string]float64    `json:"attention_weights"`
	Recommendations []Recommendation      `json:"recommendations"`
	UserIntent      string                `json:"user_intent"`
	Confidence      float64               `json:"confidence"`
	ProcessingTime  float64               `json:"processing_time_ms"`
	GPUAccelerated  bool                  `json:"gpu_accelerated"`
}

type SOMCluster struct {
	ID          string    `json:"id"`
	Centroid    []float64 `json:"centroid"`
	Documents   []string  `json:"documents"`
	Weight      float64   `json:"weight"`
	Similarity  float64   `json:"similarity"`
}

type Recommendation struct {
	Type        string  `json:"type"`
	Content     string  `json:"content"`
	Confidence  float64 `json:"confidence"`
	Action      string  `json:"action"`
}

func NewGPUOrchestrator() *GPUOrchestrator {
	config := loadConfig()
	
	// Initialize worker pool
	workerPool := &WorkerPool{
		taskQueue:   make(chan TensorTask, 1000),
		resultQueue: make(chan TaskResult, 1000),
	}
	
	// Initialize GPU workers
	numGPUs := detectGPUs()
	gpuWorkers := make([]GPUWorker, numGPUs)
	for i := 0; i < numGPUs; i++ {
		ctx, cancel := context.WithCancel(context.Background())
		gpuWorkers[i] = GPUWorker{
			ID:        i,
			Available: true,
			Memory:    config.GPUMemory,
			Context:   ctx,
			Cancel:    cancel,
		}
	}
	
	return &GPUOrchestrator{
		config:      config,
		services:    make(map[string]ServiceInstance),
		tensorQueue: make(chan TensorTask, 1000),
		gpuWorkers:  gpuWorkers,
		workerPool:  workerPool,
		wsUpgrader: websocket.Upgrader{
			CheckOrigin: func(r *http.Request) bool { return true },
		},
	}
}

func loadConfig() OrchestratorConfig {
	return OrchestratorConfig{
		HTTPPort:     getEnv("HTTP_PORT", "8095"),
		GRPCPort:     getEnv("GRPC_PORT", "8096"),
		QUICPort:     getEnv("QUIC_PORT", "8097"),
		WebSocketPort: getEnv("WS_PORT", "8098"),
		DatabaseURL:  getEnv("DATABASE_URL", "postgresql://legal_admin:123456@localhost:5432/legal_ai_db"),
		RedisURL:     getEnv("REDIS_URL", "redis://localhost:6379"),
		OllamaURL:    getEnv("OLLAMA_URL", "http://localhost:11434"),
		MaxWorkers:   getEnvInt("MAX_WORKERS", runtime.NumCPU()*2),
		GPUMemory:    getEnvInt64("GPU_MEMORY", 8*1024*1024*1024), // 8GB default
		EnableQUIC:   getEnvBool("ENABLE_QUIC", true),
		EnableWebGPU: getEnvBool("ENABLE_WEBGPU", true),
	}
}

func (o *GPUOrchestrator) Initialize() error {
	log.Println("🚀 Initializing MCP GPU Orchestrator...")
	
	// Initialize database
	var err error
	o.db, err = pgxpool.New(context.Background(), o.config.DatabaseURL)
	if err != nil {
		return fmt.Errorf("database connection failed: %w", err)
	}
	
	// Initialize Redis
	opt, err := redis.ParseURL(o.config.RedisURL)
	if err != nil {
		return fmt.Errorf("redis URL parsing failed: %w", err)
	}
	o.redis = redis.NewClient(opt)
	
	// Start worker pool
	o.startWorkerPool()
	
	// Register existing services
	o.registerServices()
	
	// Start GPU monitoring
	go o.monitorGPUs()
	
	// Start metrics collection
	go o.collectMetrics()
	
	log.Println("✅ MCP GPU Orchestrator initialized")
	return nil
}

func (o *GPUOrchestrator) registerServices() {
	services := []ServiceInstance{
		{
			Name: "enhanced-rag", Type: "go", Address: "localhost", Port: 8094,
			Protocol: "http", Status: "running",
			Metadata: map[string]interface{}{
				"model": "gemma3-legal", "capabilities": []string{"rag", "embedding", "search"},
			},
		},
		{
			Name: "upload-service", Type: "go", Address: "localhost", Port: 8093,
			Protocol: "http", Status: "running",
			Metadata: map[string]interface{}{
				"type": "file-upload", "capabilities": []string{"upload", "processing", "minio"},
			},
		},
		{
			Name: "sveltekit-frontend", Type: "node", Address: "localhost", Port: 5173,
			Protocol: "http", Status: "running",
			Metadata: map[string]interface{}{
				"framework": "sveltekit2", "ui": []string{"bits-ui", "melt-ui", "shadcn-svelte"},
			},
		},
		{
			Name: "ollama", Type: "ollama", Address: "localhost", Port: 11434,
			Protocol: "http", Status: "running",
			Metadata: map[string]interface{}{
				"models": []string{"gemma3-legal", "nomic-embed-text"}, "gpu_layers": 35,
			},
		},
		{
			Name: "postgresql", Type: "database", Address: "localhost", Port: 5432,
			Protocol: "tcp", Status: "running",
			Metadata: map[string]interface{}{
				"extensions": []string{"pgvector", "pgai"}, "version": "17",
			},
		},
		{
			Name: "redis", Type: "cache", Address: "localhost", Port: 6379,
			Protocol: "tcp", Status: "running",
			Metadata: map[string]interface{}{
				"version": "7", "memory": "256mb",
			},
		},
	}
	
	for _, service := range services {
		service.LastCheck = time.Now()
		o.services[service.Name] = service
	}
	
	log.Printf("📋 Registered %d services", len(services))
}

func (o *GPUOrchestrator) startWorkerPool() {
	// Start workers
	for i := 0; i < o.config.MaxWorkers; i++ {
		worker := Worker{
			id:       i,
			taskChan: make(chan TensorTask),
			quit:     make(chan bool),
		}
		o.workerPool.workers = append(o.workerPool.workers, worker)
		
		o.workerPool.wg.Add(1)
		go o.runWorker(worker)
	}
	
	// Start task dispatcher
	go o.dispatchTasks()
	
	log.Printf("👥 Started %d workers", o.config.MaxWorkers)
}

func (o *GPUOrchestrator) runWorker(worker Worker) {
	defer o.workerPool.wg.Done()
	
	for {
		select {
		case task := <-worker.taskChan:
			result := o.processTask(task, worker.id)
			o.workerPool.resultQueue <- result
			
		case <-worker.quit:
			return
		}
	}
}

func (o *GPUOrchestrator) processTask(task TensorTask, workerID int) TaskResult {
	start := time.Now()
	
	result := TaskResult{
		TaskID:   task.ID,
		WorkerID: workerID,
		Duration: 0,
	}
	
	defer func() {
		result.Duration = time.Since(start)
		o.metrics.CompletedTasks++
	}()
	
	switch task.Type {
	case "embedding":
		result.Result, result.Error = o.generateEmbedding(task.Input)
	case "inference":
		result.Result, result.Error = o.runInference(task.Input)
	case "som":
		result.Result, result.Error = o.runSOMClustering(task.Input)
	case "attention":
		result.Result, result.Error = o.computeAttention(task.Input)
	case "gpu_tensor":
		result.Result, result.Error = o.processGPUTensor(task.Input, task.GPURequired)
	default:
		result.Error = fmt.Errorf("unknown task type: %s", task.Type)
	}
	
	if result.Error != nil {
		o.metrics.FailedTasks++
	}
	
	return result
}

func (o *GPUOrchestrator) dispatchTasks() {
	for task := range o.tensorQueue {
		// Find available worker
		for i, worker := range o.workerPool.workers {
			select {
			case worker.taskChan <- task:
				goto dispatched
			default:
				continue
			}
		}
		
		// If no worker available, wait a bit
		time.Sleep(10 * time.Millisecond)
		select {
		case o.workerPool.workers[0].taskChan <- task:
		default:
			log.Printf("⚠️ Task queue full, dropping task %s", task.ID)
		}
		
	dispatched:
		o.metrics.TotalTasks++
	}
}

// Enhanced RAG with SOM and Attention
func (o *GPUOrchestrator) HandleEnhancedRAG(c *gin.Context) {
	start := time.Now()
	
	var req SOMAnalysisRequest
	if err := c.ShouldBindJSON(&req); err != nil {
		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
		return
	}
	
	// Create task for SOM clustering if enabled
	var somTask *TensorTask
	if req.EnableSOM {
		somTask = &TensorTask{
			ID:        fmt.Sprintf("som_%d", time.Now().UnixNano()),
			Type:      "som",
			Input:     req,
			Output:    make(chan interface{}, 1),
			Priority:  1,
			GPURequired: true,
			Timestamp: time.Now(),
		}
		o.tensorQueue <- *somTask
	}
	
	// Create task for attention computation
	var attentionTask *TensorTask
	if req.EnableAttention {
		attentionTask = &TensorTask{
			ID:        fmt.Sprintf("attention_%d", time.Now().UnixNano()),
			Type:      "attention",
			Input:     req,
			Output:    make(chan interface{}, 1),
			Priority:  1,
			GPURequired: true,
			Timestamp: time.Now(),
		}
		o.tensorQueue <- *attentionTask
	}
	
	// Call existing enhanced RAG service
	ragResponse, err := o.callEnhancedRAGService(req.Query, req.Context)
	if err != nil {
		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
		return
	}
	
	response := EnhancedRAGResponse{
		Query:          req.Query,
		Response:       ragResponse,
		UserIntent:     o.analyzeUserIntent(req.UserActivity),
		Confidence:     0.85,
		ProcessingTime: float64(time.Since(start).Nanoseconds()) / 1e6,
		GPUAccelerated: req.EnableSOM || req.EnableAttention,
	}
	
	// Collect SOM results if available
	if somTask != nil {
		select {
		case somResult := <-somTask.Output:
			if clusters, ok := somResult.([]SOMCluster); ok {
				response.SOMClusters = clusters
			}
		case <-time.After(5 * time.Second):
			log.Println("⚠️ SOM clustering timeout")
		}
	}
	
	// Collect attention results if available
	if attentionTask != nil {
		select {
		case attentionResult := <-attentionTask.Output:
			if weights, ok := attentionResult.(map[string]float64); ok {
				response.AttentionWeights = weights
			}
		case <-time.After(3 * time.Second):
			log.Println("⚠️ Attention computation timeout")
		}
	}
	
	// Generate recommendations based on analysis
	response.Recommendations = o.generateRecommendations(response)
	
	c.JSON(http.StatusOK, response)
}

func (o *GPUOrchestrator) callEnhancedRAGService(query, context string) (string, error) {
	url := "http://localhost:8094/api/rag/search"
	
	payload := map[string]interface{}{
		"query": query,
		"limit": 5,
	}
	
	payloadBytes, _ := json.Marshal(payload)
	
	resp, err := http.Post(url, "application/json", string(payloadBytes))
	if err != nil {
		return "", err
	}
	defer resp.Body.Close()
	
	var result map[string]interface{}
	json.NewDecoder(resp.Body).Decode(&result)
	
	if response, ok := result["response"].(string); ok {
		return response, nil
	}
	
	return "No response available", nil
}

// WebSocket handler for real-time updates
func (o *GPUOrchestrator) HandleWebSocket(c *gin.Context) {
	conn, err := o.wsUpgrader.Upgrade(c.Writer, c.Request, nil)
	if err != nil {
		log.Printf("WebSocket upgrade error: %v", err)
		return
	}
	defer conn.Close()
	
	// Send service status
	for {
		status := map[string]interface{}{
			"services":    o.services,
			"metrics":     o.metrics,
			"gpu_status":  o.getGPUStatus(),
			"timestamp":   time.Now(),
		}
		
		if err := conn.WriteJSON(status); err != nil {
			break
		}
		
		time.Sleep(1 * time.Second)
	}
}

// Service status endpoints
func (o *GPUOrchestrator) HandleStatus(c *gin.Context) {
	status := map[string]interface{}{
		"orchestrator": "running",
		"services":     o.services,
		"metrics":      o.metrics,
		"gpu_workers":  len(o.gpuWorkers),
		"queue_depth":  len(o.tensorQueue),
		"timestamp":    time.Now(),
	}
	
	c.JSON(http.StatusOK, status)
}

// GPU monitoring and management
func (o *GPUOrchestrator) monitorGPUs() {
	ticker := time.NewTicker(5 * time.Second)
	defer ticker.Stop()
	
	for range ticker.C {
		for i := range o.gpuWorkers {
			// Update GPU utilization (mock implementation)
			o.gpuWorkers[i].Utilization = float64(i*10 + 20) // Mock values
		}
		
		// Update metrics
		totalUtil := 0.0
		for _, gpu := range o.gpuWorkers {
			totalUtil += gpu.Utilization
		}
		o.metrics.GPUUtilization = totalUtil / float64(len(o.gpuWorkers))
	}
}

func (o *GPUOrchestrator) collectMetrics() {
	ticker := time.NewTicker(1 * time.Second)
	defer ticker.Stop()
	
	lastCompleted := o.metrics.CompletedTasks
	
	for range ticker.C {
		currentCompleted := o.metrics.CompletedTasks
		o.metrics.ThroughputPerSec = float64(currentCompleted - lastCompleted)
		lastCompleted = currentCompleted
		
		o.metrics.QueueDepth = len(o.tensorQueue)
		
		// Update average latency (simplified)
		if o.metrics.CompletedTasks > 0 {
			o.metrics.AverageLatency = 150.0 // Mock average
		}
	}
}

// Utility functions
func (o *GPUOrchestrator) generateEmbedding(input interface{}) (interface{}, error) {
	// Call Ollama embedding service
	return []float64{0.1, 0.2, 0.3}, nil // Mock implementation
}

func (o *GPUOrchestrator) runInference(input interface{}) (interface{}, error) {
	// Call Ollama inference
	return "Mock inference result", nil
}

func (o *GPUOrchestrator) runSOMClustering(input interface{}) (interface{}, error) {
	// Mock SOM clustering
	clusters := []SOMCluster{
		{ID: "cluster1", Centroid: []float64{0.1, 0.2}, Weight: 0.8, Similarity: 0.9},
		{ID: "cluster2", Centroid: []float64{0.3, 0.4}, Weight: 0.6, Similarity: 0.7},
	}
	return clusters, nil
}

func (o *GPUOrchestrator) computeAttention(input interface{}) (interface{}, error) {
	// Mock attention weights
	weights := map[string]float64{
		"legal_precedent": 0.9,
		"case_facts":      0.8,
		"statute":         0.7,
		"regulation":      0.6,
	}
	return weights, nil
}

func (o *GPUOrchestrator) processGPUTensor(input interface{}, requiresGPU bool) (interface{}, error) {
	if requiresGPU {
		// Find available GPU
		for i, gpu := range o.gpuWorkers {
			if gpu.Available {
				o.gpuWorkers[i].Available = false
				// Process on GPU
				time.Sleep(100 * time.Millisecond) // Mock processing
				o.gpuWorkers[i].Available = true
				return "GPU tensor processed", nil
			}
		}
		return nil, fmt.Errorf("no GPU available")
	}
	
	return "CPU tensor processed", nil
}

func (o *GPUOrchestrator) analyzeUserIntent(activity map[string]interface{}) string {
	// Mock user intent analysis
	if activity["typing"] == true {
		return "research"
	}
	return "browsing"
}

func (o *GPUOrchestrator) generateRecommendations(response EnhancedRAGResponse) []Recommendation {
	return []Recommendation{
		{
			Type:       "document",
			Content:    "Consider reviewing related case law",
			Confidence: 0.85,
			Action:     "search_cases",
		},
		{
			Type:       "workflow",
			Content:    "Generate evidence summary",
			Confidence: 0.75,
			Action:     "create_summary",
		},
	}
}

func (o *GPUOrchestrator) getGPUStatus() []map[string]interface{} {
	var status []map[string]interface{}
	for _, gpu := range o.gpuWorkers {
		status = append(status, map[string]interface{}{
			"id":           gpu.ID,
			"available":    gpu.Available,
			"utilization": gpu.Utilization,
			"memory":      gpu.Memory,
		})
	}
	return status
}

func (o *GPUOrchestrator) setupRoutes() *gin.Engine {
	gin.SetMode(gin.ReleaseMode)
	router := gin.New()
	router.Use(gin.Logger(), gin.Recovery())
	
	// CORS middleware
	router.Use(func(c *gin.Context) {
		c.Header("Access-Control-Allow-Origin", "*")
		c.Header("Access-Control-Allow-Methods", "GET, POST, OPTIONS")
		c.Header("Access-Control-Allow-Headers", "Content-Type")
		
		if c.Request.Method == "OPTIONS" {
			c.AbortWithStatus(204)
			return
		}
		
		c.Next()
	})
	
	// API routes
	api := router.Group("/api")
	{
		api.POST("/enhanced-rag", o.HandleEnhancedRAG)
		api.GET("/status", o.HandleStatus)
		api.GET("/services", func(c *gin.Context) {
			c.JSON(http.StatusOK, o.services)
		})
		api.GET("/metrics", func(c *gin.Context) {
			c.JSON(http.StatusOK, o.metrics)
		})
		api.GET("/gpu", func(c *gin.Context) {
			c.JSON(http.StatusOK, o.getGPUStatus())
		})
	}
	
	// WebSocket endpoint
	router.GET("/ws", o.HandleWebSocket)
	
	// Root endpoint
	router.GET("/", func(c *gin.Context) {
		c.JSON(http.StatusOK, gin.H{
			"service": "MCP GPU Orchestrator",
			"version": "1.0.0",
			"status":  "running",
			"services": len(o.services),
			"workers":  len(o.workerPool.workers),
			"endpoints": []string{
				"/api/enhanced-rag",
				"/api/status", "/api/services", "/api/metrics", "/api/gpu",
				"/ws",
			},
		})
	})
	
	return router
}

func (o *GPUOrchestrator) Run() error {
	if err := o.Initialize(); err != nil {
		return err
	}
	
	router := o.setupRoutes()
	
	log.Printf("🚀 MCP GPU Orchestrator starting on port %s", o.config.HTTPPort)
	log.Printf("📊 Metrics: %d workers, %d GPU cores", o.config.MaxWorkers, len(o.gpuWorkers))
	log.Printf("🔗 WebSocket: ws://localhost:%s/ws", o.config.HTTPPort)
	log.Printf("📡 Services integrated: %d", len(o.services))
	
	return router.Run(":" + o.config.HTTPPort)
}

// Utility functions
func getEnv(key, defaultValue string) string {
	if value := os.Getenv(key); value != "" {
		return value
	}
	return defaultValue
}

func getEnvInt(key string, defaultValue int) int {
	if value := os.Getenv(key); value != "" {
		if i, err := strconv.Atoi(value); err == nil {
			return i
		}
	}
	return defaultValue
}

func getEnvInt64(key string, defaultValue int64) int64 {
	if value := os.Getenv(key); value != "" {
		if i, err := strconv.ParseInt(value, 10, 64); err == nil {
			return i
		}
	}
	return defaultValue
}

func getEnvBool(key string, defaultValue bool) bool {
	if value := os.Getenv(key); value != "" {
		if b, err := strconv.ParseBool(value); err == nil {
			return b
		}
	}
	return defaultValue
}

func detectGPUs() int {
	// Mock GPU detection - in real implementation would use NVML or similar
	return 1 // Assuming RTX 3060 Ti
}

func main() {
	orchestrator := NewGPUOrchestrator()
	
	if err := orchestrator.Run(); err != nil {
		log.Fatalf("💥 Orchestrator failed: %v", err)
	}
}